--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,16 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile (name: 'tango_support_java_lib', ext: 'aar')
+    compile (name: 'tango-ux-support-library', ext: 'aar')
 }
