--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile(name: 'tango_support_java_lib', ext: 'aar')
+    compile(name: 'tango-ux-support-library', ext: 'aar')
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile (name: 'tango_support_java_lib', ext: 'aar')
-    compile (name: 'tango-ux-support-library', ext: 'aar')
+    compile 'com.android.support:support-v4:24.2.0'
 }
