--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/FullscreenTheme">
+        android:theme="@style/FullscreenTheme"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:theme">
 
         <activity
             android:name="com.companio.login.LoginActivity"
@@ -23,12 +25,7 @@
             android:name="com.companio.recommend.RecommendActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_recommend"
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name="com.companio.splash.SplashActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_splash"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,10 +33,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.companio.splash.SplashActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_splash"
+            android:theme="@style/FullscreenTheme">
+        </activity>
+        <activity
             android:name="com.companio.greet.GreetingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_greeting"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme">
+        </activity>
     </application>
 
 </manifest>
