--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/FullscreenTheme">
+        android:theme="@style/FullscreenTheme"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:theme">
 
         <activity
             android:name="com.companio.login.LoginActivity"
